still fighting with some layout issues.  probably need to talk with John Paul tomorrow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -78,7 +78,7 @@ ul.ui-tabs-nav li {
 	text-align: center;
 	color: #FFFFFF;
 	padding-top: 5px;
-	padding-bottom: 12px;
+	padding-bottom: 13px;
 	padding-left: 10px;
 	padding-right: 10px;
 }
